--- a/zpo/sockets_client/src/main/resources/org/zpo/sockets_client/circle-view.fxml
+++ b/zpo/sockets_client/src/main/resources/org/zpo/sockets_client/circle-view.fxml
@@ -18,7 +18,7 @@
                <menus>
                   <Menu mnemonicParsing="false" text="Serwer">
                      <items>
-                        <CheckMenuItem mnemonicParsing="false" onAction="#connect" text="Połącz" />
+                        <CheckMenuItem fx:id="connect" mnemonicParsing="false" onAction="#connect" text="Połącz" />
                      </items>
                   </Menu>
                </menus>
